# SummerCake

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: wechat-notify-for-push.yml
resources/: resources.qrc
resources/translations/: summercake_zh_CN.ts
src/: main.cpp
src/ai/: aimanager.cpp  aimanager.h  aiprovider.cpp  aiprovider.h  openaiprovider.cpp  openaiprovider.h
src/git/: gitmanager.cpp  gitmanager.h
src/widgets/: aifloatwidget.cpp  aifloatwidget.h  aisettingdialog.cpp  aisettingdialog.h  aisettingdialog.ui  branchmodel.cpp  branchmodel.h  commithistorymodel.cpp  commithistorymodel.h  filestatusmodel.cpp  filestatusmodel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  remotemodel.cpp  remotemodel.h
